change code to java 8